Fixed wrong nav bar size on mobile.

--- a/css/navigation.less
+++ b/css/navigation.less
@@ -52,6 +52,7 @@ sections {
                         height: @NAVIGATION_HEIGHT;
                         @media screen and (max-width: @SMARTPHONE_MAX_PORTRAIT) { 
                             width: @NAVIGATION_HEIGHT_MOBILE - 20px;
+                            height: @NAVIGATION_HEIGHT_MOBILE;
                         }
                         .logo {
                             display: block;
